--- a/backend/deployment/api_config.yaml
+++ b/backend/deployment/api_config.yaml
@@ -4,7 +4,10 @@ config_version: 3
 #
 # Name of the Service Configuration.
 #
-name: testgrpc.endpoints.PROJECT_ID.cloud.goog
+name: grpc.endpoints.nodejs-238515.cloud.goog
+endpoints:
+  - name: grpc.endpoints.nodejs-238515.cloud.goog
+    target: "<EXTERNAL_IP_ADDRESS>"
 
 title: Test gRPC API
 apis:
@@ -13,5 +16,5 @@ apis:
 
 usage:
   rules:
-    - selector: PublicAccessService.GetMessage
+    - selector: "*"
       allow_unregistered_calls: true
