--- a/backend/deployment/http_deployment.yml
+++ b/backend/deployment/http_deployment.yml
@@ -17,12 +17,12 @@ spec:
           image: sarora139/grpc-test-server:latest
           ports:
             - containerPort: 9090
-        - name: esp-grpc
+        - name: esp
           image: gcr.io/endpoints-release/endpoints-runtime:1
           args: [
             "--http_port=8080",
             "--http2_port=9000",
-            "--service=testgrpc.endpoints.nodejs-238515.cloud.goog",
+            "--service=grpc.endpoints.nodejs-238515.cloud.goog",
             "--rollout_strategy=managed",
             "--backend=grpc://127.0.0.1:9090"
           ]
