ssl deployment update

--- a/backend/deployment/http_service.yml
+++ b/backend/deployment/http_service.yml
@@ -8,10 +8,9 @@ spec:
     # Port that accepts JSON/HTTP1.1 requests over HTTP.
     - port: 8080
       targetPort: 8080
-      name: esp-http1
-    # Port that accepts gRPC
-    - port: 9000
-      targetPort: 9000
-      name: esp-grpc
+      name: http
+    # Port that accepts https requests
+    - port: 443
+      name: https
   selector:
     deploy: grpc-test-server
