--- a/backend/deployment/http_deployment.yml
+++ b/backend/deployment/http_deployment.yml
@@ -12,6 +12,10 @@ spec:
       labels:
         deploy: grpc-test-server
     spec:
+      volumes:
+        - name: nginx-ssl
+          secret:
+            secretName: nginx-ssl
       containers:
         - name: grpc-test-server
           image: sarora139/grpc-test-server:latest
@@ -20,12 +24,16 @@ spec:
         - name: esp
           image: gcr.io/endpoints-release/endpoints-runtime:1
           args: [
-            "--http_port=8080",
-            "--http2_port=9000",
-            "--service=grpc.endpoints.nodejs-238515.cloud.goog",
-            "--rollout_strategy=managed",
-            "--backend=grpc://127.0.0.1:9090"
+            "--http_port", "8080",
+            "--ssl_port", "443",
+            "--service", "grpc.endpoints.nodejs-238515.cloud.goog",
+            "--rollout_strategy", "managed",
+            "--backend", "grpc://127.0.0.1:9090"
           ]
           ports:
-            - containerPort: 9000
             - containerPort: 8080
+            - containerPort: 443
+          volumeMounts:
+            - mountPath: /etc/nginx/ssl
+              name: nginx-ssl
+              readOnly: true
