--- a/backend/deployment/http_deployment.yml
+++ b/backend/deployment/http_deployment.yml
@@ -24,13 +24,15 @@ spec:
         - name: esp
           image: gcr.io/endpoints-release/endpoints-runtime:1
           args: [
+            # --http2_port=9000 to accept gRPC HTTP/2 requests without https support
             "--http_port", "8080",
-            "--ssl_port", "443",
+            "--ssl_port", "443", # listens to http/1.1 and http/2 requests with ssl certificate on the same port
             "--service", "grpc.endpoints.nodejs-238515.cloud.goog",
             "--rollout_strategy", "managed",
             "--backend", "grpc://127.0.0.1:9090"
           ]
           ports:
+            # - containerPort: 9000 to accept gRPC HTTP/2 requests
             - containerPort: 8080
             - containerPort: 443
           volumeMounts:
